Opened 15 years ago
Closed 15 years ago
#771 closed defect (fixed)
zzufed .avi file crashes ffmpeg_g(memory exceeded)
| Reported by: | Diana Muscalu | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | OOM avi |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
use zzuf -c -s1470:1480 -r0.001:1 ffmpeg_g -i 2004-12-17-uebung9-partial.avi -f null - to produce the crash
Attachments (1)
Change History (2)
by , 15 years ago
| Attachment: | 2004-12-17-uebung9-partial.avi added |
|---|
comment:1 by , 15 years ago
| Component: | FFmpeg → avformat |
|---|---|
| Keywords: | OOM avi added |
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )